# ai-iot-hub

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  PROJECT_COMPLETE.md  README.md  TERMINAL_FIX_SUMMARY.md  demo_credentials.py  demo_simple.py  demo_smartthings.py  demo_working_discovery.py  interactive_hub.py  pyproject.toml  quick_test.py  requirements.txt  test_discovery.py  test_hub.py  test_installation.py  test_terminal_fix.py  verify_terminal_fix.py
.github/: copilot-instructions.md
devices/raw_docs/: README.md
devices/raw_docs/sensors/: zigbee_spec_link.txt
devices/raw_docs/thermostats/: nest_api_docs.txt  samsung_smartthings_api.txt
docs/: COMPLETE_WORKFLOW.md  EXISTING_PYTHON_TOOLS.md  FUNCTIONALITY_ANALYSIS.md  MAC_ADDRESS_LIMITATIONS.md
examples/: codeagent_direct_file_access.py  intelligent_docs_workflow.py  llm_native_document_processing.py  real_device_discovery.py
src/: __init__.py
src/agents/: auto_docs_tool.py  code_writing_agent.py  device_tools.py  spec_analyzer.py
src/discovery/: __init__.py  comprehensive_discovery.py
src/hub/: ai_controller.py  main.py
